# fastai-pytorch-demos

./: NOTES.md  README.md  ntbk.ipynb  pyproject.toml
Chapter01-Intro/: 01_intro.ipynb
Chapter02-Production/: 02_production.ipynb  02_production.py  NOTES.md
Chapter03-Ethics/: 03_ethics.ipynb  NOTES.md
